[5/2/2012]
Version 0.6.7                               "I said 'Step pause turn
                                             pause pivot step step'"

- Crashes and serious errors:

  * [cmdline]: Avoid dpkg and infinite loop in download-only mode
               (Closes: #629266) (LP: #975793)

  * [cmdline]: Check for apt_init errors in cmdline_download.cc
               (Closes: #670379)

- Internal changes:

  * [all]: No longer use ListUpdate (from libapt-pkg) to update package
           lists.  Instead, restore the previous code and update it to
           include the semantics from ListUpdate which were missing.

           ListUpdate was too coarse to suit download_update_manager
           properly even though it more-or-less worked.

  * [all]: Do not call debtags on list update.  This was a rather
           unsightly kludge is better suited as a script for
           APT::Update::Post-Invoke.

  * [all]: Destroy download_threads when done with them.  The objects
           were previously left undestroyed, consuming resources and
           keeping, e.g., locks open longer than needed.

- Cosmetic and UI bugs:

  * [curses]: Apply patch from Ubuntu: don't mention 'su' in 'Become
              root'.

  * [cmdline]: Use arch-qualified names in 'Provided by' for virtual
               packages (LP: #972847)

- Build system changes:

  * [all]: Include build of gtest when building gmock. (Closes: #670403)

  * [all]: Fix check_boost.sh for out-of-tree builds

- Documentation:

  * [doc]: Apply patch from Ubuntu: update Finnish manpage to point to
           doc package.

- New translations:

  * Croatian (Closes: #667934)

[3/17/2012]
Version 0.6.6                               "There is not one you,
                                             there are many."

This version of aptitude brings in basic multi-arch support.  Similar
to APT, foreign-arch packages are displayed using their full name,
including architecture, for example: 'libc6:armel'.
